[tool.poetry]
name = "cycleops"
version = "0.5.0"
description = "The official command line interface for Cycleops"
authors = ["George Margaritis <george@withlogic.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
sec = "^0.3.0"
typer = { extras = ["all"], version = "^0.7.0" }

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[tool.poetry.scripts]
cycleops = "cycleops.__main__:cycleops"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
